@@ -18,7 +18,11 @@
 
 ## String API extended
 
-* preview, added as `@Deprecated`
+* preview
+  * added as `@Deprecated`
+  * requires
+    * `--enable-preview --source 13` for `javac`
+    * `--enable-preview` for `java`
 * `stripIndent()`
 * `translateEscapes()`
 * `formatted()`
@@ -26,7 +30,14 @@
 
 ## Simplified CDS archives creation
 
-
+* Class Data Sharing
+* `-XX:ArchiveClassesAtExit=CDS.jsa`
+  * application archive creation
+* `-XX:SharedArchiveFile=CDS.jsa`
+  * use of application archive
+* class data sharing for JDK classes enable by default since Java 12
+  * `-Xshare:off` to turn off
+* *https://blog.codefx.org/java/application-class-data-sharing/*
 
 ## Other
 
@@ -34,5 +45,6 @@
 * `ByteBuffer` API extended
 * ZGC can return memory to operating system
 
-*References:  
-https://www.mkyong.com/java/what-is-new-in-java-13/*
+---
+References:  
+* https://www.mkyong.com/java/what-is-new-in-java-13/
